# socle

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  pyproject.toml
.github/workflows/: publish.yml  release-orkester.yml  release.yml
cmake/: orkesterConfig.cmake.in  orkesterConfigVersion.cmake.in
crates/egaku/: Cargo.toml
crates/egaku/src/: lib.rs
crates/i3s/: Cargo.toml
crates/i3s-async/: Cargo.toml
crates/i3s-async/src/: accessor.rs  async_system.rs  gunzip.rs  i3s_accessor.rs  lib.rs  request.rs  resolver.rs  resource.rs  rest.rs  slpk.rs  task_processor.rs
crates/i3s-content/: Cargo.toml
crates/i3s-content/src/: attributes.rs  decoder.rs  lib.rs
crates/i3s-geometry/: Cargo.toml
crates/i3s-geometry/src/: aabb.rs  culling.rs  frustum.rs  intersection.rs  lib.rs  obb.rs  plane.rs  ray.rs  rectangle.rs  sphere.rs  transforms.rs
crates/i3s-geospatial/: Cargo.toml
crates/i3s-python/: Cargo.toml
crates/i3s-python/src/: async.rs  async_support.rs  geometry.rs  geospatial.rs  lib.rs  numpy_conv.rs  selection.rs  spec.rs
crates/i3s-reader/: Cargo.toml
crates/i3s-reader/src/: attribute.rs  attribute_compression.rs  codec.rs  draco.rs  geometry.rs  json.rs  lepcc.rs  lib.rs  texture.rs
crates/i3s-selection/: Cargo.toml
crates/i3s-selection/src/: building.rs  cache.rs  content.rs  excluder.rs  externals.rs  layer_info.rs  lib.rs  loader.rs  node_state.rs  node_tree.rs  options.rs  prepare.rs  scene_layer.rs  selection.rs  update_result.rs  view_state.rs
crates/i3s-util/: Cargo.toml
crates/i3s/src/: bld.rs  building.rs  cmn.rs  core.rs  display.rs  feature.rs  geometry.rs  lib.rs  material.rs  node.rs  pcsl.rs  pointcloud.rs  psl.rs  spatial.rs
crates/kasane/: Cargo.toml
crates/kasane/src/: basemaps.rs  compositing.rs  engine.rs  event.rs  gltf.rs  hierarchy.rs  lib.rs  overlay.rs  target.rs
crates/kasane/src/providers/: mod.rs  tms.rs  url_template.rs  wms.rs  wmts.rs
crates/kiban/: Cargo.toml
crates/kiban/src/: async_runtime.rs  content.rs  content_cache.rs  event.rs  lib.rs  runtime.rs  uri.rs
crates/moderu/: Cargo.toml  README.md
crates/moderu-codec/: Cargo.toml
crates/moderu-codec/src/: draco.rs  image.rs  ktx2.rs  lib.rs  meshopt.rs  spz.rs
crates/moderu-io/: Cargo.toml
crates/moderu-io/src/: lib.rs
crates/moderu-io/src/reader/: async_external_refs.rs  dequantize.rs  error.rs  external_refs.rs  glb.rs  image_ops.rs  khr_texture_transform.rs  mod.rs  pipeline.rs  uri.rs
crates/moderu-io/src/writer/: mod.rs  writer.rs
crates/moderu-io/src/writer/codec/: mod.rs
crates/moderu-io/tests/: features.rs  read.rs  write.rs
crates/moderu/src/: accessor.rs  animation.rs  buffer_data.rs  builder.rs  compaction.rs  copyright.rs  extensions.rs  generated.rs  geometry.rs  image.rs  io.rs  lib.rs  merge.rs  metadata.rs  property.rs  property_type.rs  sampler.rs  scene.rs  semantics.rs  texture.rs
crates/orkester/: Cargo.toml  README.md
crates/orkester-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml
crates/orkester-ffi/src/: erased.rs  lib.rs
crates/orkester-io/: Cargo.toml
crates/orkester-io/src/: lib.rs
crates/orkester/src/: block_on.rs  cancellation.rs  channel.rs  combinators.rs  context.rs  error.rs  executor.rs  future.rs  join_set.rs  lib.rs  load_once.rs  main_loop.rs  main_thread.rs  promise.rs  resolver.rs  scheduler.rs  scope.rs  semaphore.rs  shared_cell.rs  state.rs  system.rs  task.rs  task_cell.rs  task_processor.rs  thread_pool.rs  timer.rs  work_queue.rs
crates/orkester/tests/: channel.rs  integration.rs  scheduler.rs  semaphore.rs  system.rs
crates/outil/: Cargo.toml
crates/schema-gen/: Cargo.toml
crates/schema-gen/configs/: 3dtiles.json  gltf.json
crates/schema-gen/src/: config.rs  generate.rs  main.rs
crates/selekt/: Cargo.toml  README.md
crates/selekt-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml
crates/selekt-ffi/src/: lib.rs  test_harness.rs  vtable.rs  wrappers.rs
crates/selekt/src/: composite.rs  engine.rs  engine_state.rs  evaluators.rs  factory.rs  format.rs  frame.rs  frame_decision.rs  hierarchy.rs  lib.rs  load.rs  lod.rs  lod_threshold.rs  node.rs  node_store.rs  options.rs  policy.rs  query.rs  scheduler.rs  selection.rs  selection_state.rs  step.rs  traversal.rs  view.rs
crates/selekt/tests/: engine.rs
crates/socle-bridge/: Cargo.toml
crates/socle-bridge/src/: main.rs
crates/socle-bridge/web/: bridge.js  index.html
crates/socle-viewer/: Cargo.toml
crates/socle-viewer/src/: camera.rs  main.rs  prepare.rs  renderer.rs  solid.wgsl  textured.wgsl  vertex.rs
crates/terra/: Cargo.toml
crates/terra/src/: bounding_region.rs  cartographic.rs  crs.rs  ellipsoid.rs  globe.rs  lhcs.rs  lib.rs  projection.rs  sr.rs  transforms.rs
crates/terra/tests/: geo.rs
crates/tiles3d/: Cargo.toml
crates/tiles3d-content/: Cargo.toml
crates/tiles3d-content/src/: converters.rs  decoder.rs  lib.rs
crates/tiles3d-selekt/: Cargo.toml
crates/tiles3d-selekt/src/: ellipsoid_content_loader.rs  ellipsoid_tileset_loader.rs  evaluator.rs  format.rs  height_sampler.rs  hierarchy.rs  lib.rs  loader.rs  resolver.rs  skirt.rs  tileset.rs
crates/tiles3d-selekt/tests/: http_integration.rs  skirt.rs
crates/tiles3d/src/: availability.rs  format.rs  generated.rs  hierarchy.rs  implicit_tiling_utilities.rs  impls.rs  lib.rs  loader.rs  metadata_query.rs  reader.rs  subtree.rs  tile.rs  tiling_scheme.rs  writer.rs
crates/zukei/: Cargo.toml  README.md
crates/zukei/src/: aabb.rs  bounds.rs  frustum.rs  glam.rs  intersection.rs  lib.rs  math.rs  obb.rs  plane.rs  polygon.rs  ray.rs  rectangle.rs  sphere.rs  transforms.rs
docs/: RELEASE.md  rules.md
include/: orkester.h  selekt.h
python/i3s/: __init__.py  __init__.pyi  _native.pyi  async_.py  async_.pyi  geometry.py  geometry.pyi  geospatial.py  geospatial.pyi  selection.py  selection.pyi  spec.py  spec.pyi
scripts/: check_names.py  generate-3dtiles.ps1  generate-gltf.ps1  generate.ps1  generate_rust.py  parse_spec.py  vcpkg-hashes.ps1  vcpkg-hashes.sh
scripts/i3s/: generate_rust.py
(+15 files in other folders)
