[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "i3s-native"
version = "0.1.0"
description = "Python bindings for the i3s-native engine (I3S scene layers)"
requires-python = ">=3.12"
dependencies = ["numpy", "pyproj"]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/calebbuffa/i3s-native"

[tool.maturin]
# The cdylib crate lives in crates/i3s-python.
manifest-path = "crates/i3s-python/Cargo.toml"
# Mixed Rust + Python layout: pure-Python stubs live in python/i3s/
python-source = "python"
module-name = "i3s._native"
features = ["pyo3/extension-module"]
