[package]
name = "i3s-async"
version = "0.1.0"
edition = "2024"

[dependencies]
i3s = { path = "../i3s" }
i3s-util = { path = "../i3s-util" }
i3s-reader = { path = "../i3s-reader" }
flate2 = "1"

[dependencies.reqwest]
version = "0.13"
features = ["gzip"]
optional = true

[dependencies.zip]
version = "8"
optional = true

[dependencies.md-5]
version = "0.10"
optional = true

[features]
default = ["rest"]
rest = ["dep:reqwest"]
slpk = ["dep:zip", "dep:md-5"]
