[package]
name = "i3s-python"
version = "0.1.0"
edition = "2024"

[lib]
name = "i3s"
crate-type = ["cdylib"]

[dependencies]
i3s = { path = "../i3s" }
i3s-util = { path = "../i3s-util" }
i3s-reader = { path = "../i3s-reader" }
i3s-geometry = { path = "../i3s-geometry" }
i3s-geospatial = { path = "../i3s-geospatial" }
i3s-async = { path = "../i3s-async" }
i3s-selection = { path = "../i3s-selection" }
glam = { version = "0.32", features = ["std"] }
pyo3 = { version = "0.28", features = ["extension-module"] }
numpy = "0.28"

[features]
default = ["rest"]
rest = ["i3s-async/rest"]
slpk = ["i3s-async/slpk"]
