[package]
name = "i3s"
version = "0.1.0"
edition = "2024"
description = "Pure data types for the I3S (Indexed 3D Scene Layer) specification"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
strict = [] # enables #[serde(deny_unknown_fields)] on all types
