[package]
name = "kasane"
version.workspace = true
edition = "2024"
license.workspace = true
description = "Raster overlay system for socle tile streaming"
repository.workspace = true

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
log = "0.4"
moderu = { path = "../moderu" }
orkester = { path = "../orkester" }
orkester-io = { path = "../orkester-io" }
terra = { path = "../terra" }
zukei = { path = "../zukei" }
glam = { version = "0.32", features = ["std"] }
