[package]
name = "moderu"
description = "glTF 2.0 data model with vendor extension support"
edition = "2024"
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bitflags = "2"
bytemuck = { version = "1", features = ["derive"] }
glam = { version = "0.32", features = ["std", "bytemuck"] }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zukei = { path = "../zukei" }
