[package]
name = "orkester-ffi"
version.workspace = true
edition = "2024"
license.workspace = true
description = "C ABI for the orkester async runtime"
repository.workspace = true

[lib]
crate-type = ["staticlib"]

[dependencies]
orkester = { path = "../orkester" }

[build-dependencies]
cbindgen = "0.28"
