[package]
name = "orkester-io"
version.workspace = true
edition = "2024"
license.workspace = true
description = "Async I/O traits for orkester"
repository.workspace = true

[dependencies]
kiban = { path = "../kiban" }
orkester = { path = "../orkester" }
flate2 = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
ureq = { version = "2", features = ["gzip"] }
