[package]
name = "selekt-ffi"
version = "0.1.0"
edition = "2024"
license.workspace = true
description = "C ABI for the selekt tile selection engine"
repository.workspace = true

[lib]
crate-type = ["staticlib"]

[dependencies]
orkester = { path = "../orkester" }
selekt = { path = "../selekt", features = ["glam"] }
zukei = { path = "../zukei", default-features = false }

[build-dependencies]
cbindgen = "0.28"
