[package]
name = "selekt"
version = "0.1.0"
edition = "2024"
license.workspace = true
description = "Format-agnostic tile selection engine for spatial data"
repository.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
glam = { version = "0.32", features = ["std"] }
terra = { path = "../terra" }
zukei = { path = "../zukei" }
