[package]
name = "socle-viewer"
version.workspace = true
edition = "2024"
license.workspace = true

[[bin]]
name = "viewer"
path = "src/main.rs"

[dependencies]
tiles3d-selekt = { path = "../tiles3d-selekt" }
egaku = { path = "../egaku" }
orkester = { path = "../orkester" }
orkester-io = { path = "../orkester-io" }
terra = { path = "../terra" }
moderu = { path = "../moderu" }
selekt = { path = "../selekt" }
zukei = { path = "../zukei" }
glam = { version = "0.32", features = ["std", "bytemuck"] }
bytemuck = { version = "1", features = ["derive"] }
wgpu = "24"
winit = "0.30"
pollster = "0.3"
thiserror = "2"
env_logger = "0.11"
log = "0.4"
