[package]
name = "tiles3d"
description = "3D Tiles data model with extension support"
edition = "2024"
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glam = { version = "0.32", features = ["std"] }
terra = { path = "../terra" }
zukei = { path = "../zukei" }
outil = { path = "../outil" }
thiserror = "2"
